<resources>
    <string name="app_name">My App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration_page">Sign Up </string>
    <string name="your_name">Enter Name</string>
    <string name="your_email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="textview">Sign In</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="product">Product</string>
</resources>